<resources>
    <string name="app_name">ShoeStore</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="screen_login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="screen_welcome">Welcome</string>
    <string name="screen_instructions">Instructions</string>
    <string name="screen_shop_detail">Shop Detail</string>
    <string name="action_next">Next</string>
    <string name="welcome_text_one">Welcome!</string>
    <string name="welcome_text_two">Welcome from Shoe Store.</string>
    <string name="instruction_one">Instruction</string>
    <string name="instruction_two">Manage Shoe Store</string>
    <string name="hint_title">Title</string>
    <string name="hint_company">Company</string>
    <string name="hint_shoe_size">Shoe Size</string>
    <string name="action_save">Save</string>
    <string name="desc_floating_action">Add New Shoe</string>
    <string name="hint_description">Description</string>
    <string name="action_cancel">Cancel</string>
    <string name="screen_shoe_list">Shoe List</string>
    <string name="action_logout">Logout</string>
</resources>